# culling_games

./: README.md
src/cg/cg/: Game.py
src/cg_navigator/: CMakeLists.txt  package.xml
src/cg_navigator/src/: mapper_node.cpp  navigator_node.cpp
